hphp/hack/test/typecheck/constraints/contravariance_constraint_bad_2.php.exp
File "contravariance_constraint_bad_2.php", line 39, characters 7-14:
Invalid argument (Typing[4110])
File "contravariance_constraint_bad_2.php", line 43, characters 12-13:
Some type constraint(s) here are violated
File "contravariance_constraint_bad_2.php", line 37, characters 33-33:
'T' is a constrained type
File "contravariance_constraint_bad_2.php", line 39, characters 16-18:
This is an object of type NAC\AAA
File "contravariance_constraint_bad_2.php", line 36, characters 16-18:
It is incompatible with an object of type NAC\BBB
